<resources>
    <string name="app_name">GenggamMakna</string>
    <string name="start">MULAI</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa Password</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">atau</string>
    <string name="name">Nama</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="nama_akhir">Last Name</string>
    <string name="nama_awal">First Name</string>

    <!--    hardcoded-->
    <string name="enter_your_email">Enter your email</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="passwords_do_not_match">Password do not Match</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_permission_denied">camera permission denied</string>
    <string name="initializing_model">initializing model</string>
    <string name="model_ready_done">model is ready</string>
    <string name="please_wait">Process is still running. Please wait.</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="hi_guest">Hi, Guest</string>
    <string name="hand_sign_detection">Hand Sign Detection</string>
    <string name="image_button_sibi">Image Button SIBI</string>
    <string name="sibi">SIBI</string>
    <string name="image_button_sibindo">Image Button SIBINDO</string>
    <string name="sibindo">SIBINDO</string>
    <string name="add_button">Add Button</string>
    <string name="image_button_upload">Image Button Upload</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_view_display">Image View Display</string>
    <string name="result">Result</string>
    <string name="detect">Detect</string>
    <string name="live_detection">Live Detection</string>
    <string name="camera_preview">Camera Preview</string>
    <string name="log_out">Log Out</string>
</resources>