<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/hand_sign_detection"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonSibi"
        android:layout_width="283dp"
        android:layout_height="164dp"
        android:layout_marginTop="44dp"
        android:background="@null"
        android:contentDescription="@string/image_button_sibi"
        android:foreground="#5D000000"
        android:scaleType="centerCrop"
        android:src="@drawable/indonesian_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/textOnImageSibi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sibi"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="#80000000"
        android:shadowRadius="4"
        android:shadowDx="2"
        android:shadowDy="2"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toTopOf="@id/imageButtonSibi"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonSibi"
        app:layout_constraintStart_toStartOf="@id/imageButtonSibi"
        app:layout_constraintEnd_toEndOf="@id/imageButtonSibi" />

    <ImageButton
        android:id="@+id/imageButtonSibindo"
        android:layout_width="283dp"
        android:layout_height="164dp"
        android:layout_marginTop="52dp"
        android:background="@null"
        android:contentDescription="@string/image_button_sibindo"
        android:scaleType="centerCrop"
        android:src="@drawable/gradient_gold_resource"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButtonSibi" />

    <TextView
        android:id="@+id/textOnImageSibindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sibindo"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="#80000000"
        android:shadowRadius="4"
        android:shadowDx="2"
        android:shadowDy="2"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toTopOf="@id/imageButtonSibindo"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonSibindo"
        app:layout_constraintStart_toStartOf="@id/imageButtonSibindo"
        app:layout_constraintEnd_toEndOf="@id/imageButtonSibindo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
