<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/hand_sign_detection"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonSibindo"
        android:layout_width="283dp"
        android:layout_height="294dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/image_button_upload"
        android:src="@drawable/gradient_gold_resource"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/textOnImageSibindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="#80000000"
        android:shadowRadius="4"
        android:shadowDx="2"
        android:shadowDy="2"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toTopOf="@id/imageButtonSibindo"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonSibindo"
        app:layout_constraintStart_toStartOf="@id/imageButtonSibindo"
        app:layout_constraintEnd_toEndOf="@id/imageButtonSibindo" />

    <ImageView
        android:id="@+id/imageViewDisplay"
        android:layout_width="283dp"
        android:layout_height="294dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/image_view_display"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="372dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/imageButtonSibindo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <Button
        android:id="@+id/detectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detect"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/poppins_regular"
        android:backgroundTint="#D3D3D3"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/resultText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
