<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/live_detection"
            android:fontFamily="@font/poppins_regular"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center" />

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#000"
            android:contentDescription="@string/camera_preview" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tvDetectedSentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CAC9C9"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/result"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="25sp"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_gravity="center"/>

        </FrameLayout>
    </LinearLayout>
</ScrollView>
